draft of NTLMv2 authentication